--- a/g3d/CMakeLists.txt
+++ b/g3d/CMakeLists.txt
@@ -5,6 +5,7 @@ if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
 endif(NOT CMAKE_BUILD_TYPE)
 message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
+set(CMAKE_CUDA_FLAGS "-arch=sm_70")
 project(G3d LANGUAGES CXX CUDA)
 
 set(Source_DIR "${PROJECT_SOURCE_DIR}/src")
