--- a/g3d/src/CMakeLists.txt
+++ b/g3d/src/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.12)
 set(ProjectName "testcuda")
 project(testcuda)
-
-file(GLOB SOURCES ./*.h ./*.hpp ./*.cpp ./*.c)
-
+include_directories(${Source_DIR}/Mesh)
+file(GLOB CUDA_SOURCE CUDA/*.h CUDA/*.cu)
+message(STATUS "DEBUG: CUDA src: ${CUDA_SOURCE}")
+add_library(cudalib ${CUDA_SOURCE})
+target_compile_features(cudalib PUBLIC cxx_std_11)
 add_library(cudaMatMul c_cpp_cu1.cu)
 target_compile_features(cudaMatMul PUBLIC cxx_std_11)
 add_executable(testcuda c_cpp_cu3.cpp)
