可运行版，可能存在bug

--- a/g3d/CMakeLists.txt
+++ b/g3d/CMakeLists.txt
@@ -1,11 +1,13 @@
 cmake_minimum_required(VERSION 3.12)
 SET(CMAKE_POLICY_DEFAULT_CMP0074 NEW)
-
 if (NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE "Release")
 endif(NOT CMAKE_BUILD_TYPE)
 message(STATUS "Build Type: ${CMAKE_BUILD_TYPE}")
-set(CMAKE_CUDA_FLAGS "-arch=sm_70")
+#Release
+set(CMAKE_CUDA_FLAGS "-arch=compute_75 -code=sm_75")
+#debug
+#set(CMAKE_CUDA_FLAGS "–g –G -arch=compute_70 -code=sm_70 ")
 
 if(MSVC)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /bigobj") ### Enable parallel compilation
@@ -14,8 +16,8 @@ else()
 	
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations -Wno-unused-parameter -Wno-unused-result -fPIC -fcompare-debug-second")
 	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-deprecated-declarations -Wno-unused-parameter -Wno-unused-result -fcompare-debug-second")
-    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb3")
-    set(CMAKE_CXX_FLAGS_RELEASE "-O2 -fpermissive")
+    set(CMAKE_CXX_FLAGS_DEBUG "-O0 -ggdb3 ")
+    set(CMAKE_CXX_FLAGS_RELEASE "-O2 ")
 endif()
 
 
